gen/CircParser.js
// Generated from /Users/hsiaosiyuan/WebstormProjects/circ/antlrv4/CircParser.g4 by ANTLR 4.7
// jshint ignore: start
var antlr4 = require('antlr4/index');
var CircParserVisitor = require('./CircParserVisitor').CircParserVisitor;

var grammarFileName = "CircParser.g4";



var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "'let'", "'if'", "'then'", "'else'", "'fun'", 
                     "'for'", "'in'", "'this'", null, "'{'", "'}'", "'['", 
                     "']'", "'('", "')'", "','", "';'", "':'", "'.'", "'+'", 
                     "'-'", "'*'", "'/'", "'%'", "'='", "'<'", "'>'", "'=='", 
                     "'!='", "'<='", "'>='", "'->'", "'null'", "'undefined'" ];

var symbolicNames = [ null, "Let", "If", "Then", "Else", "Fun", "For", "In", 
                      "This", "LineTerminator", "OpenBrace", "CloseBrace", 
                      "OpenBracket", "CloseBracket", "OpenParen", "CloseParen", 
                      "Comma", "SemiColon", "Colon", "Dot", "Plus", "Minus", 
                      "Multiply", "Divide", "Modulus", "Assign", "LessThan", 
                      "MoreThan", "Equals", "NotEquals", "LessThanEquals", 
                      "GreaterThanEquals", "LambdaConnect", "NullLiteral", 
                      "UndefinedLiteral", "BooleanLiteral", "IntegerLiteral", 
                      "HexIntegerLiteral", "RealLiteral", "Identifier", 
                      "StringLiteral", "WhiteSpaces", "MultiLineComment", 
                      "SingleLineComment" ];

var ruleNames =  [ "program", "statements", "statement", "noEmptyStatement", 
                   "blockStatement", "statementList", "varDeclarationStatement", 
                   "varDeclarationList", "variableDeclaration", "initializer", 
                   "singleExpr", "arguments", "argumentList", "exprSequence", 
                   "literal", "numericLiteral", "arrayLiteral", "elementList", 
                   "objectLiteral", "propertyNameAndValueList", "propertyAssignment", 
                   "emptyStatement", "eos", "formalParameterList", "functionBody", 
                   "ifStatement", "ifStatementBody", "exprStatement", "reservedWord", 
                   "keyword" ];

function CircParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;

	  CircParser.prototype.here = function(type, channel = antlr4.Lexer.DEFAULT_TOKEN_CHANNEL) {
	      const token = this.getCurrentToken();
	      return (token.channel == channel) && (token.type == type);
	  }

	  CircParser.prototype.lineTerminatorAhead = function() {
	    const idx = this.getCurrentToken().tokenIndex - 1
	    const ahead = this._input.get(idx)

	    if (ahead.channel != antlr4.Lexer.HIDDEN) {
	      return false
	    }

	    const text = ahead.text
	    const type = ahead.type

	    const case1 = type == CircParser.MultiLineComment && (text.indexOf("\r") !== -1 || text.indexOf("\n") !== -1)
	    return case1 || (type == CircParser.LineTerminator)
	  }

    return this;
}

CircParser.prototype = Object.create(antlr4.Parser.prototype);
CircParser.prototype.constructor = CircParser;

Object.defineProperty(CircParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

CircParser.EOF = antlr4.Token.EOF;
CircParser.Let = 1;
CircParser.If = 2;
CircParser.Then = 3;
CircParser.Else = 4;
CircParser.Fun = 5;
CircParser.For = 6;
CircParser.In = 7;
CircParser.This = 8;
CircParser.LineTerminator = 9;
CircParser.OpenBrace = 10;
CircParser.CloseBrace = 11;
CircParser.OpenBracket = 12;
CircParser.CloseBracket = 13;
CircParser.OpenParen = 14;
CircParser.CloseParen = 15;
CircParser.Comma = 16;
CircParser.SemiColon = 17;
CircParser.Colon = 18;
CircParser.Dot = 19;
CircParser.Plus = 20;
CircParser.Minus = 21;
CircParser.Multiply = 22;
CircParser.Divide = 23;
CircParser.Modulus = 24;
CircParser.Assign = 25;
CircParser.LessThan = 26;
CircParser.MoreThan = 27;
CircParser.Equals = 28;
CircParser.NotEquals = 29;
CircParser.LessThanEquals = 30;
CircParser.GreaterThanEquals = 31;
CircParser.LambdaConnect = 32;
CircParser.NullLiteral = 33;
CircParser.UndefinedLiteral = 34;
CircParser.BooleanLiteral = 35;
CircParser.IntegerLiteral = 36;
CircParser.HexIntegerLiteral = 37;
CircParser.RealLiteral = 38;
CircParser.Identifier = 39;
CircParser.StringLiteral = 40;
CircParser.WhiteSpaces = 41;
CircParser.MultiLineComment = 42;
CircParser.SingleLineComment = 43;

CircParser.RULE_program = 0;
CircParser.RULE_statements = 1;
CircParser.RULE_statement = 2;
CircParser.RULE_noEmptyStatement = 3;
CircParser.RULE_blockStatement = 4;
CircParser.RULE_statementList = 5;
CircParser.RULE_varDeclarationStatement = 6;
CircParser.RULE_varDeclarationList = 7;
CircParser.RULE_variableDeclaration = 8;
CircParser.RULE_initializer = 9;
CircParser.RULE_singleExpr = 10;
CircParser.RULE_arguments = 11;
CircParser.RULE_argumentList = 12;
CircParser.RULE_exprSequence = 13;
CircParser.RULE_literal = 14;
CircParser.RULE_numericLiteral = 15;
CircParser.RULE_arrayLiteral = 16;
CircParser.RULE_elementList = 17;
CircParser.RULE_objectLiteral = 18;
CircParser.RULE_propertyNameAndValueList = 19;
CircParser.RULE_propertyAssignment = 20;
CircParser.RULE_emptyStatement = 21;
CircParser.RULE_eos = 22;
CircParser.RULE_formalParameterList = 23;
CircParser.RULE_functionBody = 24;
CircParser.RULE_ifStatement = 25;
CircParser.RULE_ifStatementBody = 26;
CircParser.RULE_exprStatement = 27;
CircParser.RULE_reservedWord = 28;
CircParser.RULE_keyword = 29;

function ProgramContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = CircParser.RULE_program;
    return this;
}

ProgramContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ProgramContext.prototype.constructor = ProgramContext;

ProgramContext.prototype.EOF = function() {
    return this.getToken(CircParser.EOF, 0);
};

ProgramContext.prototype.statements = function() {
    return this.getTypedRuleContext(StatementsContext,0);
};

ProgramContext.prototype.accept = function(visitor) {
    if ( visitor instanceof CircParserVisitor ) {
        return visitor.visitProgram(this);
    } else {
        return visitor.visitChildren(this);
    }
};




CircParser.ProgramContext = ProgramContext;

CircParser.prototype.program = function() {

    var localctx = new ProgramContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, CircParser.RULE_program);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 61;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << CircParser.Let) | (1 << CircParser.If) | (1 << CircParser.Then) | (1 << CircParser.Else) | (1 << CircParser.Fun) | (1 << CircParser.For) | (1 << CircParser.In) | (1 << CircParser.This) | (1 << CircParser.OpenBrace) | (1 << CircParser.OpenBracket) | (1 << CircParser.OpenParen) | (1 << CircParser.SemiColon))) !== 0) || ((((_la - 33)) & ~0x1f) == 0 && ((1 << (_la - 33)) & ((1 << (CircParser.NullLiteral - 33)) | (1 << (CircParser.UndefinedLiteral - 33)) | (1 << (CircParser.BooleanLiteral - 33)) | (1 << (CircParser.IntegerLiteral - 33)) | (1 << (CircParser.HexIntegerLiteral - 33)) | (1 << (CircParser.RealLiteral - 33)) | (1 << (CircParser.Identifier - 33)) | (1 << (CircParser.StringLiteral - 33)))) !== 0)) {
            this.state = 60;
            this.statements();
        }

        this.state = 63;
        this.match(CircParser.EOF);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function StatementsContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = CircParser.RULE_statements;
    return this;
}

StatementsContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
StatementsContext.prototype.constructor = StatementsContext;

StatementsContext.prototype.statement = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(StatementContext);
    } else {
        return this.getTypedRuleContext(StatementContext,i);
    }
};

StatementsContext.prototype.accept = function(visitor) {
    if ( visitor instanceof CircParserVisitor ) {
        return visitor.visitStatements(this);
    } else {
        return visitor.visitChildren(this);
    }
};




CircParser.StatementsContext = StatementsContext;

CircParser.prototype.statements = function() {

    var localctx = new StatementsContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, CircParser.RULE_statements);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 66; 
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        do {
            this.state = 65;
            this.statement();
            this.state = 68; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        } while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << CircParser.Let) | (1 << CircParser.If) | (1 << CircParser.Then) | (1 << CircParser.Else) | (1 << CircParser.Fun) | (1 << CircParser.For) | (1 << CircParser.In) | (1 << CircParser.This) | (1 << CircParser.OpenBrace) | (1 << CircParser.OpenBracket) | (1 << CircParser.OpenParen) | (1 << CircParser.SemiColon))) !== 0) || ((((_la - 33)) & ~0x1f) == 0 && ((1 << (_la - 33)) & ((1 << (CircParser.NullLiteral - 33)) | (1 << (CircParser.UndefinedLiteral - 33)) | (1 << (CircParser.BooleanLiteral - 33)) | (1 << (CircParser.IntegerLiteral - 33)) | (1 << (CircParser.HexIntegerLiteral - 33)) | (1 << (CircParser.RealLiteral - 33)) | (1 << (CircParser.Identifier - 33)) | (1 << (CircParser.StringLiteral - 33)))) !== 0));
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function StatementContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = CircParser.RULE_statement;
    return this;
}

StatementContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
StatementContext.prototype.constructor = StatementContext;

StatementContext.prototype.blockStatement = function() {
    return this.getTypedRuleContext(BlockStatementContext,0);
};

StatementContext.prototype.exprStatement = function() {
    return this.getTypedRuleContext(ExprStatementContext,0);
};

StatementContext.prototype.varDeclarationStatement = function() {
    return this.getTypedRuleContext(VarDeclarationStatementContext,0);
};

StatementContext.prototype.emptyStatement = function() {
    return this.getTypedRuleContext(EmptyStatementContext,0);
};

StatementContext.prototype.ifStatement = function() {
    return this.getTypedRuleContext(IfStatementContext,0);
};

StatementContext.prototype.accept = function(visitor) {
    if ( visitor instanceof CircParserVisitor ) {
        return visitor.visitStatement(this);
    } else {
        return visitor.visitChildren(this);
    }
};




CircParser.StatementContext = StatementContext;

CircParser.prototype.statement = function() {

    var localctx = new StatementContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, CircParser.RULE_statement);
    try {
        this.state = 75;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,2,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 70;
            this.blockStatement();
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 71;
            this.exprStatement();
            break;

        case 3:
            this.enterOuterAlt(localctx, 3);
            this.state = 72;
            this.varDeclarationStatement();
            break;

        case 4:
            this.enterOuterAlt(localctx, 4);
            this.state = 73;
            this.emptyStatement();
            break;

        case 5:
            this.enterOuterAlt(localctx, 5);
            this.state = 74;
            this.ifStatement();
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function NoEmptyStatementContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = CircParser.RULE_noEmptyStatement;
    return this;
}

NoEmptyStatementContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
NoEmptyStatementContext.prototype.constructor = NoEmptyStatementContext;

NoEmptyStatementContext.prototype.blockStatement = function() {
    return this.getTypedRuleContext(BlockStatementContext,0);
};

NoEmptyStatementContext.prototype.exprStatement = function() {
    return this.getTypedRuleContext(ExprStatementContext,0);
};

NoEmptyStatementContext.prototype.varDeclarationStatement = function() {
    return this.getTypedRuleContext(VarDeclarationStatementContext,0);
};

NoEmptyStatementContext.prototype.ifStatement = function() {
    return this.getTypedRuleContext(IfStatementContext,0);
};

NoEmptyStatementContext.prototype.accept = function(visitor) {
    if ( visitor instanceof CircParserVisitor ) {
        return visitor.visitNoEmptyStatement(this);
    } else {
        return visitor.visitChildren(this);
    }
};




CircParser.NoEmptyStatementContext = NoEmptyStatementContext;

CircParser.prototype.noEmptyStatement = function() {

    var localctx = new NoEmptyStatementContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, CircParser.RULE_noEmptyStatement);
    try {
        this.state = 81;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,3,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 77;
            this.blockStatement();
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 78;
            this.exprStatement();
            break;

        case 3:
            this.enterOuterAlt(localctx, 3);
            this.state = 79;
            this.varDeclarationStatement();
            break;

        case 4:
            this.enterOuterAlt(localctx, 4);
            this.state = 80;
            this.ifStatement();
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function BlockStatementContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = CircParser.RULE_blockStatement;
    return this;
}

BlockStatementContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
BlockStatementContext.prototype.constructor = BlockStatementContext;

BlockStatementContext.prototype.OpenBrace = function() {
    return this.getToken(CircParser.OpenBrace, 0);
};

BlockStatementContext.prototype.CloseBrace = function() {
    return this.getToken(CircParser.CloseBrace, 0);
};

BlockStatementContext.prototype.statementList = function() {
    return this.getTypedRuleContext(StatementListContext,0);
};

BlockStatementContext.prototype.accept = function(visitor) {
    if ( visitor instanceof CircParserVisitor ) {
        return visitor.visitBlockStatement(this);
    } else {
        return visitor.visitChildren(this);
    }
};




CircParser.BlockStatementContext = BlockStatementContext;

CircParser.prototype.blockStatement = function() {

    var localctx = new BlockStatementContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, CircParser.RULE_blockStatement);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 83;
        this.match(CircParser.OpenBrace);
        this.state = 85;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << CircParser.Let) | (1 << CircParser.If) | (1 << CircParser.Then) | (1 << CircParser.Else) | (1 << CircParser.Fun) | (1 << CircParser.For) | (1 << CircParser.In) | (1 << CircParser.This) | (1 << CircParser.OpenBrace) | (1 << CircParser.OpenBracket) | (1 << CircParser.OpenParen) | (1 << CircParser.SemiColon))) !== 0) || ((((_la - 33)) & ~0x1f) == 0 && ((1 << (_la - 33)) & ((1 << (CircParser.NullLiteral - 33)) | (1 << (CircParser.UndefinedLiteral - 33)) | (1 << (CircParser.BooleanLiteral - 33)) | (1 << (CircParser.IntegerLiteral - 33)) | (1 << (CircParser.HexIntegerLiteral - 33)) | (1 << (CircParser.RealLiteral - 33)) | (1 << (CircParser.Identifier - 33)) | (1 << (CircParser.StringLiteral - 33)))) !== 0)) {
            this.state = 84;
            this.statementList();
        }

        this.state = 87;
        this.match(CircParser.CloseBrace);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function StatementListContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = CircParser.RULE_statementList;
    return this;
}

StatementListContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
StatementListContext.prototype.constructor = StatementListContext;

StatementListContext.prototype.statement = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(StatementContext);
    } else {
        return this.getTypedRuleContext(StatementContext,i);
    }
};

StatementListContext.prototype.accept = function(visitor) {
    if ( visitor instanceof CircParserVisitor ) {
        return visitor.visitStatementList(this);
    } else {
        return visitor.visitChildren(this);
    }
};




CircParser.StatementListContext = StatementListContext;

CircParser.prototype.statementList = function() {

    var localctx = new StatementListContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, CircParser.RULE_statementList);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 90; 
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        do {
            this.state = 89;
            this.statement();
            this.state = 92; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        } while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << CircParser.Let) | (1 << CircParser.If) | (1 << CircParser.Then) | (1 << CircParser.Else) | (1 << CircParser.Fun) | (1 << CircParser.For) | (1 << CircParser.In) | (1 << CircParser.This) | (1 << CircParser.OpenBrace) | (1 << CircParser.OpenBracket) | (1 << CircParser.OpenParen) | (1 << CircParser.SemiColon))) !== 0) || ((((_la - 33)) & ~0x1f) == 0 && ((1 << (_la - 33)) & ((1 << (CircParser.NullLiteral - 33)) | (1 << (CircParser.UndefinedLiteral - 33)) | (1 << (CircParser.BooleanLiteral - 33)) | (1 << (CircParser.IntegerLiteral - 33)) | (1 << (CircParser.HexIntegerLiteral - 33)) | (1 << (CircParser.RealLiteral - 33)) | (1 << (CircParser.Identifier - 33)) | (1 << (CircParser.StringLiteral - 33)))) !== 0));
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function VarDeclarationStatementContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = CircParser.RULE_varDeclarationStatement;
    return this;
}

VarDeclarationStatementContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
VarDeclarationStatementContext.prototype.constructor = VarDeclarationStatementContext;

VarDeclarationStatementContext.prototype.Let = function() {
    return this.getToken(CircParser.Let, 0);
};

VarDeclarationStatementContext.prototype.varDeclarationList = function() {
    return this.getTypedRuleContext(VarDeclarationListContext,0);
};

VarDeclarationStatementContext.prototype.eos = function() {
    return this.getTypedRuleContext(EosContext,0);
};

VarDeclarationStatementContext.prototype.accept = function(visitor) {
    if ( visitor instanceof CircParserVisitor ) {
        return visitor.visitVarDeclarationStatement(this);
    } else {
        return visitor.visitChildren(this);
    }
};




CircParser.VarDeclarationStatementContext = VarDeclarationStatementContext;

CircParser.prototype.varDeclarationStatement = function() {

    var localctx = new VarDeclarationStatementContext(this, this._ctx, this.state);
    this.enterRule(localctx, 12, CircParser.RULE_varDeclarationStatement);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 94;
        this.match(CircParser.Let);
        this.state = 95;
        this.varDeclarationList();
        this.state = 96;
        this.eos();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function VarDeclarationListContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = CircParser.RULE_varDeclarationList;
    return this;
}

VarDeclarationListContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
VarDeclarationListContext.prototype.constructor = VarDeclarationListContext;

VarDeclarationListContext.prototype.variableDeclaration = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(VariableDeclarationContext);
    } else {
        return this.getTypedRuleContext(VariableDeclarationContext,i);
    }
};

VarDeclarationListContext.prototype.Comma = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(CircParser.Comma);
    } else {
        return this.getToken(CircParser.Comma, i);
    }
};


VarDeclarationListContext.prototype.accept = function(visitor) {
    if ( visitor instanceof CircParserVisitor ) {
        return visitor.visitVarDeclarationList(this);
    } else {
        return visitor.visitChildren(this);
    }
};




CircParser.VarDeclarationListContext = VarDeclarationListContext;

CircParser.prototype.varDeclarationList = function() {

    var localctx = new VarDeclarationListContext(this, this._ctx, this.state);
    this.enterRule(localctx, 14, CircParser.RULE_varDeclarationList);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 98;
        this.variableDeclaration();
        this.state = 103;
        this._errHandler.sync(this);
        var _alt = this._interp.adaptivePredict(this._input,6,this._ctx)
        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
            if(_alt===1) {
                this.state = 99;
                this.match(CircParser.Comma);
                this.state = 100;
                this.variableDeclaration(); 
            }
            this.state = 105;
            this._errHandler.sync(this);
            _alt = this._interp.adaptivePredict(this._input,6,this._ctx);
        }

    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function VariableDeclarationContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = CircParser.RULE_variableDeclaration;
    return this;
}

VariableDeclarationContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
VariableDeclarationContext.prototype.constructor = VariableDeclarationContext;

VariableDeclarationContext.prototype.Identifier = function() {
    return this.getToken(CircParser.Identifier, 0);
};

VariableDeclarationContext.prototype.initializer = function() {
    return this.getTypedRuleContext(InitializerContext,0);
};

VariableDeclarationContext.prototype.reservedWord = function() {
    return this.getTypedRuleContext(ReservedWordContext,0);
};

VariableDeclarationContext.prototype.literal = function() {
    return this.getTypedRuleContext(LiteralContext,0);
};

VariableDeclarationContext.prototype.accept = function(visitor) {
    if ( visitor instanceof CircParserVisitor ) {
        return visitor.visitVariableDeclaration(this);
    } else {
        return visitor.visitChildren(this);
    }
};




CircParser.VariableDeclarationContext = VariableDeclarationContext;

CircParser.prototype.variableDeclaration = function() {

    var localctx = new VariableDeclarationContext(this, this._ctx, this.state);
    this.enterRule(localctx, 16, CircParser.RULE_variableDeclaration);
    try {
        this.state = 120;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,10,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 106;
            this.match(CircParser.Identifier);
            this.state = 108;
            this._errHandler.sync(this);
            var la_ = this._interp.adaptivePredict(this._input,7,this._ctx);
            if(la_===1) {
                this.state = 107;
                this.initializer();

            }
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 110;
            this.reservedWord();
             this.notifyErrorListeners("Can not use reserved word as identifier") 
            this.state = 113;
            this._errHandler.sync(this);
            var la_ = this._interp.adaptivePredict(this._input,8,this._ctx);
            if(la_===1) {
                this.state = 112;
                this.initializer();

            }
            break;

        case 3:
            this.enterOuterAlt(localctx, 3);
            this.state = 115;
            this.literal();
             this.notifyErrorListeners("Can not use literal as lvalue") 
            this.state = 118;
            this._errHandler.sync(this);
            var la_ = this._interp.adaptivePredict(this._input,9,this._ctx);
            if(la_===1) {
                this.state = 117;
                this.initializer();

            }
            break;
